--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		/>
 	</head>
 	<body>
-		<h2>Monaco Editor Sync Loading Sample</h2>
+		<h2>Codestruction Zone🥳</h2>
 		<div id="container" style="width: 800px; height: 600px; border: 1px solid grey"></div>
 
 		<script>
