feat:project added app.js css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       id="container"
       style="width: 800px; height: 600px; border: 1px solid grey"
     ></div>
+    <div
+      id="output-container"
+      style="width: 800px; height: 600px; border: 1px solid grey"
+    ></div>
 
     <script>
       var require = { paths: { vs: "../node_modules/monaco-editor/min/vs" } };
